# aDDa_simulation

./: README.md  installation.md
adda_description/: CMakeLists.txt  package.xml
adda_description/config/: focused_pic.rviz  visualization.rviz
adda_description/launch/: visualization_rviz.launch
adda_description/meshes/: wheel_normal.dae  wheel_reduced_2.dae  wheel_reduced_3.dae
adda_description/sensors/: VLP-16.urdf.xacro  all_sensors.urdf.xacro  gps.urdf.xacro  gps_hector_plugin.urdf.xacro  ground_truth_odom.urdf.xacro  imu_hector_plugin.urdf.xacro  zed.urdf.xarco
adda_description/urdf/: car.urdf  car.urdf.xacro  suspension_wheel.urdf.xacro
adda_gazebo/: CMakeLists.txt  package.xml
adda_gazebo/config/: RSBand_local_planner.yaml  control.yaml  costmap.yaml  global_costmap_parameter.yaml  local_costmap_parameter.yaml  logitech_f710.config.yaml  move_base.yaml  navigation.rviz  navigation_RSBand.rviz  teb_local_planner.yaml  teb_local_planner_optim.yaml
adda_gazebo/launch/: gazebo.launch  joystick.launch  load_controller.launch  map_joy.launch  navigation.launch  parametrized.launch  pathplanning.launch
adda_gazebo/maps/: circle.yaml  snake.yaml  straight.yaml  testmap_blank.yaml  window.yaml
adda_gazebo/nodes/: ground_truth_transfromer.py  visualize_velocity_profile.py
adda_gazebo/worlds/: gas_station.sdf  gas_terrain.sdf  terrain2.sdf
robot_control/: README.md
robot_control/launch/: robot_control.launch  rqt_robot_control.launch
robot_control/nodes/: twist_to_ackermannDrive.py
robot_control/src/: robot_control.cpp
