<?xml version="1.0"?>
<package>
  <name>adda_description</name>
  <version>1.0.0</version>
	<description> This is the new URDF model for the gazebo_ros simulation of the adda car (Mercedes S450) </description>

  <author email="josef.kinold@stud.tu-darmstadt.de">Josef Kinold</author>
  <maintainer email="josef.kinold@stud.tu-darmstadt.de">Josef Kinold</maintainer>

	<license>GPL</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
